
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WindowAggPath ;
typedef int StringInfo ;
typedef int Path ;


 int WRITE_NODE_FIELD (int ) ;
 int WRITE_NODE_TYPE (char*) ;
 int _outPathInfo (int ,int const*) ;
 int subpath ;
 int winclause ;

__attribute__((used)) static void
_outWindowAggPath(StringInfo str, const WindowAggPath *node)
{
 WRITE_NODE_TYPE("WINDOWAGGPATH");

 _outPathInfo(str, (const Path *) node);

 WRITE_NODE_FIELD(subpath);
 WRITE_NODE_FIELD(winclause);
}
